# protocol-lab-components

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR-AGREEMENT.md  CONTRIBUTORS.md  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: contributor-agreement.yml  package-production.yml  validate.yml
assets/brand/: LICENSE.md
docs/: README.md  component-aware-release-system-plan.md  contributor-agreement-automation.md  dns-doh3-component-delivery.md  governance-decisions.md  http-executor-delivery-plan.md  http2-websocket-component-delivery.md  implementation-coverage-backfill-wishlist.md  implementation-coverage-baseline.json  implementation-diversity-wishlist.md  package-coverage-matrix.md  quic-http3-implementation-inventory.json  raw-quic-interop-image-feasibility-2026-07-16.md  secure-dns-resolver-quic-feasibility-2026-07-16.md  tls-endpoint-tool-feasibility.md  tls13-early-data-component-delivery.md  tls13-key-update-component-delivery.md
docs/adr/: 0001-component-aware-package-releases.md
executors/aioquic-rfc9220-websocket/: README.md  execute.ps1  execute.sh  protocol-lab-package.json  protocol-lab.internal.json
executors/curl-http3-client/: README.md  execute.ps1  execute.sh  protocol-lab-package.json  protocol-lab.internal.json
executors/dns-classic-fixture/: executor.go  executor_test.go  go.mod
executors/go-dns-doh2-executor/: README.md  package.protocol-lab.json  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-dns-doh3-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-dns-doq-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-dns-dot-executor/: README.md  execute.ps1  execute.sh  package.protocol-lab.json  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-dns-tcp-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-dns-udp-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-grpc-h2-executor/: README.md  execute.ps1  execute.sh  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-http1-executor/: README.md  execute.ps1  execute.sh  package.protocol-lab.json  protocol-lab-package.json  toolchain.json
executors/go-http1-websocket-executor/: README.md  execute.ps1  execute.sh  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-http1-websocket-tls-executor/: README.md  execute.ps1  execute.sh  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-http2-executor/: README.md  execute.ps1  execute.sh  package.protocol-lab.json  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-http2-websocket-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-masque-connect-udp-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-tls12-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-tls13-executor/: README.md  package.protocol-lab.json  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-tls13-mtls-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-utls-tls13-chacha20-executor/: README.md  protocol-lab-package.json  protocol-lab.internal.json  toolchain.json
executors/go-webtransport-executor/: README.md  protocol-lab-package.json  toolchain.json  (+1 more)
executors/rustls-tls13-early-data-executor/source/: Cargo.toml
executors/rustls-tls13-early-data-executor/source/src/: main.rs
implementations/grpc-cpp/source/: CMakeLists.txt  server.cc
implementations/picoquic-raw/source/: CMakeLists.txt  Dockerfile  main.c
implementations/quiche-raw/source/: Cargo.toml  Dockerfile
implementations/quiche-raw/source/src/: main.rs
implementations/quinn-raw/source/: Cargo.toml
implementations/quinn-raw/source/src/: main.rs
implementations/rust-hyper-origin/source/: Cargo.toml
implementations/rust-hyper-origin/source/src/: main.rs
implementations/s2n-quic-raw/source/: Cargo.toml
implementations/s2n-quic-raw/source/src/: main.rs
release/: README.md  component-graph.v1.json
templates/: http3-external-implementation.entry.yaml  http3-external-implementation.internal.json  http3-external-implementation.package.json  http3-external-test-executor.entry.yaml  http3-external-test-executor.internal.json  http3-external-test-executor.package.json  implementation.package.json  test-executor.package.json
toolchains/: README.md  dotnet.json  go.json
(+1241 files in other folders)
