[package]
name = "protocol-lab-rustls-tls13-early-data-executor"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rustls = { version = "=0.23.35", default-features = false, features = ["std"] }
rustls-pemfile = "=2.2.0"
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["std"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
