[package]
name = "protocol-lab-quiche-raw"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
publish = false

[dependencies]
env_logger = "=0.11.11"
log = "=0.4.33"
mio = { version = "=1.2.2", features = ["net", "os-poll"] }
quiche = "=0.29.3"
ring = "=0.17.14"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
