[package]
name = "protocol-lab-quinn-raw"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "=1.0.100"
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = { version = "=0.14.8", default-features = false, features = ["crypto", "ring"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.48.0", features = ["io-util", "macros", "rt-multi-thread", "signal"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
