[package]
name = "rust-hyper-origin"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "=1.10.1"
http-body-util = "=0.1.3"
hyper = { version = "=1.6.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "=0.1.16", features = ["http1", "http2", "server", "tokio"] }
tokio = { version = "=1.46.1", features = ["macros", "net", "rt-multi-thread"] }
