[package]
name = "protocol-lab-s2n-quic-raw"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "=1.0.100"
bytes = "=1.12.1"
rcgen = { version = "=0.14.8", default-features = false, features = ["crypto", "ring"] }
s2n-quic = { version = "=1.83.0", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "signal"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
